syntax = "proto3";

option java_package = "ar.edu.itba.pod.grpc";
option java_multiple_files = true;

service ReservationService {
  rpc AttractionLookUp(AttractionLookUpRequest) returns (AttractionLookUpResponse);
  rpc AttractionAvailabilityLookUp(AvailabilityRequest) returns (AttractionResponse);
  rpc SubmitReservation(ReservationRequest) returns (ReservationResponse);
  rpc ConfirmReservation(ConfirmReservationRequest) returns (ConfirmReservationResponse);
  rpc CancelReservation(CancelReservationRequest) returns (CancelReservationResponse);
}

message AttractionData {
  string name = 1;
  string hoursFrom = 2;
  string hoursTo = 3;
  int32 slotGap = 4;
}

message AttractionLookUpRequest {

}

message AttractionLookUpResponse {
  repeated AttractionData attractions = 1;
}

message AvailabilityRequest {
  string attractionName = 1;
  string dayOfYear = 2;
  string slotFrom = 3;
  string slotTo = 4;
}

message AttractionInfo {
  int32 confirmedReservations = 1;
  int32 pendingReservations = 2;
  int32 slotGap = 4;
}

message AttractionResponse {
  repeated AttractionInfo attractionInfo = 1;
}

message ReservationRequest {
  string attractionName = 1;
  string dayOfYear = 2;
  string slot = 3;
  string visitorId = 4;
}

enum ReservationStatus {
  RESERVATION_STATUS_UNKNOWN = 0;
  RESERVATION_STATUS_PENDING = 1;
  RESERVATION_STATUS_CONFIRMED = 2;
}

message ReservationResponse {
  ReservationStatus status = 1;
}

message ConfirmReservationRequest {
  string attractionName = 1;
  string dayOfYear = 2;
  string slot = 3;
  string visitorId = 4;
}

message ConfirmReservationResponse {
  bool success = 1;
}

message CancelReservationRequest {
  string attractionName = 1;
  string dayOfYear = 2;
  string slot = 3;
  string visitorId = 4;
}

message CancelReservationResponse {
  bool success = 1;
}
